# avn-hub

./: .dockerignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: docker.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: attachments.rs  commands.rs  error.rs  http_auth.rs  lib.rs  main.rs  migration.rs  models.rs  platform.rs  scanner.rs  state.rs  storage.rs
src-tauri/src/api/: auth.rs  middleware.rs  mod.rs  tus.rs
src-tauri/src/db/: attachments.rs  mod.rs  schema.sql
src-tauri/src/sources/: f95zone.rs  mod.rs
src-tauri/src/sources/f95zone/: auth.rs  text.rs
src/components/: ArchiveUpload.tsx  CoverPreview.tsx  GameFilesCard.tsx  GameUserNotesCard.tsx  GlobalTaskBar.tsx  Layout.tsx  LibraryFilterPanel.tsx  LibraryMigrationCard.tsx  Lightbox.tsx  MobileActionMenu.tsx  PlatformDownloadPicker.tsx  ScreenshotGallery.tsx  TagFilterBox.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  sheet.tsx  tabs.tsx
src/context/: AuthContext.tsx  TaskContext.tsx
src/lib/: api.ts  game-response.ts  image-url.ts  types.ts  utils.ts
src/pages/: GameDetailPage.tsx  LibraryPage.tsx  LoginPage.tsx  MatchPage.tsx  SettingsPage.tsx
