[package]
name = "avn-hub"
version = "0.1.0"
description = "AVN library and metadata manager"
authors = ["you"]
edition = "2021"

[lib]
name = "avn_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "avn-hub-server"
path = "src/bin/server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
reqwest = { version = "0.12", features = ["cookies", "json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
dirs = "6"
urlencoding = "2"
tokio-util = { version = "0.7", features = ["io"] }
rfd = "0.15"
